crates/parser/tests/snapshots/statements__aspect_decl_fact.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"DECLARE ASPECT unit WITH $${\"type\": \"object\", \"properties\": {\"value\": {\"type\": \"string\"}}}$$ AS FACT;\"#).expect(\"must parse\")"
---
[
    Declare(
        Aspect(
            AspectDecl {
                name: Ident {
                    value: "unit",
                    quote_style: None,
                    span: Span(Location(1,16)..Location(1,20)),
                },
                schema: JsonBody {
                    value: Object {
                        "properties": Object {
                            "value": Object {
                                "type": String("string"),
                            },
                        },
                        "type": String("object"),
                    },
                    raw: "{\"type\": \"object\", \"properties\": {\"value\": {\"type\": \"string\"}}}",
                },
                kind: Fact,
            },
        ),
    ),
]
