crates/parser/tests/snapshots/statements__aspect_decl_measurement.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"DECLARE ASPECT min_max WITH $${\"type\": \"object\", \"properties\": {\"min\": {}, \"max\": {}}}$$ AS MEASUREMENT;\"#).expect(\"must parse\")"
---
[
    Declare(
        Aspect(
            AspectDecl {
                name: Ident {
                    value: "min_max",
                    quote_style: None,
                    span: Span(Location(1,16)..Location(1,23)),
                },
                schema: JsonBody {
                    value: Object {
                        "properties": Object {
                            "max": Object {},
                            "min": Object {},
                        },
                        "type": String("object"),
                    },
                    raw: "{\"type\": \"object\", \"properties\": {\"min\": {}, \"max\": {}}}",
                },
                kind: Measurement,
            },
        ),
    ),
]
