crates/parser/tests/snapshots/statements__function_decl_accepts_aspects.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE FUNCTION outliers FOR GLOBAL FROM 'functions/outliers.rhai' ACCEPTS (column_profile) RETURNS outlier_profile;\").expect(\"must parse\")"
---
[
    Declare(
        Function(
            FunctionDecl {
                name: Ident {
                    value: "outliers",
                    quote_style: None,
                    span: Span(Location(1,18)..Location(1,26)),
                },
                scope: Global,
                script: "functions/outliers.rhai",
                accepts: [
                    Ident {
                        value: "column_profile",
                        quote_style: None,
                        span: Span(Location(1,78)..Location(1,92)),
                    },
                ],
                returns: Some(
                    Ident {
                        value: "outlier_profile",
                        quote_style: None,
                        span: Span(Location(1,102)..Location(1,117)),
                    },
                ),
            },
        ),
    ),
]
