crates/parser/tests/snapshots/statements__function_decl_no_accepts.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"DECLARE FUNCTION profile_min_max FOR fin FROM 'functions/profile_min_max.rhai' RETURNS $${\"type\": \"object\", \"required\": [\"value\"]}$$;\"#).expect(\"must parse\")"
---
[
    Declare(
        Function(
            FunctionDecl {
                name: Ident {
                    value: "profile_min_max",
                    quote_style: None,
                    span: Span(Location(1,18)..Location(1,33)),
                },
                scope: Dataset(
                    Ident {
                        value: "fin",
                        quote_style: None,
                        span: Span(Location(1,38)..Location(1,41)),
                    },
                ),
                script: "functions/profile_min_max.rhai",
                accepts: [],
                returns: JsonBody {
                    value: Object {
                        "required": Array [
                            String("value"),
                        ],
                        "type": String("object"),
                    },
                    raw: "{\"type\": \"object\", \"required\": [\"value\"]}",
                },
            },
        ),
    ),
]
